--- a/PAGINAS_CLIENTE/carrinho.html
+++ b/PAGINAS_CLIENTE/carrinho.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>carrinho</title>
+    <title>Bootstrap demo</title>
    <!--Bootstrap CSS via CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -16,26 +16,27 @@
 
 
   <!-- =================== MENU SUPERIOR =================== -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-custom px-3">
-    <!-- Marca/Logo -->
-    <a class="navbar-brand" href="index.html">
-      <img src="../IMG/logotr.png" alt="Logo JR Espetos" class="logo-menu">
-    </a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-custom py-3 px-3 px-md-4">
+  <!-- Marca/Logo -->
+  <a class="navbar-brand d-flex align-items-center" href="index.html">
+    <img src="../IMG/logotr.png" alt="Logo JR Espetos" class="logo-menu img-fluid">
+  </a>
 
-    <!-- Botão responsivo -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <!-- Botão responsivo -->
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <!-- Links do menu -->
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-        <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
-        <li class="nav-item"><a class="nav-link active" href="carrinho.html">Carrinho</a></li>
-      </ul>
-    </div>
-  </nav>
+  <!-- Links do menu -->
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ms-auto text-center text-lg-start">
+      <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
+      <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
+      <li class="nav-item"><a class="nav-link active" href="carrinho.html">Carrinho</a></li>
+    </ul>
+  </div>
+</nav>
+
 
   <!-- Inicio do Container Carrinho ----------------------------------------->
   <div class="container my-4">
@@ -65,9 +66,17 @@
         </div>
 
         <div class="d-flex gap-2">
-          <button class="btn btn-outline-secondary btn-sm"><i class="bi bi-pencil"></i></button>
-          <button class="btn btn-outline-danger btn-sm remover-item"><i class="bi bi-trash"></i></button>
-        </div>
+  <!-- Editar quantidade -->
+  <button class="btn btn-outline-primary btn-sm" title="Editar quantidade">
+    <i class="bi bi-pencil-square me-1"></i> Editar
+  </button>
+
+  <!-- Remover item -->
+  <button class="btn btn-outline-danger btn-sm remover-item" title="Remover item do carrinho">
+    <i class="bi bi-trash3 me-1"></i> Remover
+  </button>
+</div>
+
       </div>
 
       <!-- Produto 2 -->
@@ -86,10 +95,17 @@
         </div>
 
         <div class="d-flex gap-2">
-          <button class="btn btn-outline-secondary btn-sm"><i class="bi bi-pencil"></i></button>
-          <button class="btn btn-outline-danger btn-sm remover-item"><i class="bi bi-trash"></i></button>
-        </div>
-      </div>
+  <!-- Editar quantidade -->
+  <button class="btn btn-outline-primary btn-sm" title="Editar quantidade">
+    <i class="bi bi-pencil-square me-1"></i> Editar
+  </button>
+
+  <!-- Remover item -->
+  <button class="btn btn-outline-danger btn-sm remover-item" title="Remover item do carrinho">
+    <i class="bi bi-trash3 me-1"></i> Remover
+  </button>
+</div>
+
 
     </div>
     <!-- Fim da Lista de Itens ----------------------------------------->
@@ -110,12 +126,14 @@
   </div>
   <!-- Fim do Container Carrinho ----------------------------------------->
 
-  <!-- Inicio do Rodapé ----------------------------------------->
-  <footer class="bg-custom text-white text-center py-3 mt-4">
+  <!-- Inicio do Rodapé -----------------------------------------> 
+   <footer class="bg-custom w-100 mt-4">
+  <div class="container-fluid py-3 px-3 px-md-4 d-flex justify-content-center align-items-center">
     <p class="mb-0">&copy; 2025 JR Espetos - Todos os direitos reservados</p>
-  </footer>
-  <!-- Fim do Rodapé ----------------------------------------->
+  </div>
+</footer>
 
+   <!-- Fim do Rodapé ----------------------------------------->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     // Inicio do Script de Cálculo do Carrinho --------------------
