--- a/PAGINAS_LOJISTA/cadastroproduto.html
+++ b/PAGINAS_LOJISTA/cadastroproduto.html
@@ -36,52 +36,41 @@
       <h2 class="text-center fw-bold mb-4">Adicionar Novo Produto</h2>
 
       <!-- Formulário de cadastro de produto -->
-      <form id="formProduto">
+      <form action="../PHP/cadastrar_produto.php" method="POST" enctype="multipart/form-data"id="formProduto">
 
         <!-- Nome do produto -->
         <div class="mb-3">
           <label for="nomeProduto" class="form-label fw-bold">Nome do produto:</label>
-          <input type="text" id="nomeProduto" class="form-control" placeholder="Digite o nome do produto" required>
+          <input type="text" id="nomeProduto" class="form-control" placeholder="Digite o nome do produto" name="nome" required>
         </div>
 
         <!-- Descrição -->
         <div class="mb-3">
           <label for="descricao" class="form-label fw-bold">Descrição:</label>
-          <textarea id="descricao" class="form-control" rows="4" placeholder="Digite a descrição do produto"></textarea>
-        </div>
-
-        <!-- Categoria e Preço -->
-        <div class="row g-3">
-          <div class="col-md-6">
-            <label for="categoria" class="form-label fw-bold">Categoria:</label>
-            <select id="categoria" class="form-select" required>
-              <option value="">Selecione...</option>
-              <option value="Carnes">Carnes</option>
-              <option value="Bebidas">Bebidas</option>
-              <option value="Sobremesas">Sobremesas</option>
-            </select>
-          </div>
-          <div class="col-md-6">
-            <label for="preco" class="form-label fw-bold">Preço:</label>
-            <div class="input-group">
-              <span class="input-group-text">R$</span>
-              <input type="number" id="preco" class="form-control" step="0.01" placeholder="0,00" required>
-            </div>
-          </div>
+          <textarea id="descricao" name="descricao" class="form-control" rows="4" placeholder="Digite a descrição do produto"></textarea>
         </div>
 
         <!-- Quantidade e Imagem -->
         <div class="row g-3 mt-3">
           <div class="col-md-6">
             <label for="quantidade" class="form-label fw-bold">Quantidade:</label>
-            <input type="number" id="quantidade" class="form-control" min="1" value="1" required>
+            <input type="number" id="quantidade" name="quantidade" class="form-control" min="1" value="1" required>
           </div>
           <div class="col-md-6">
             <label for="imagem" class="form-label fw-bold">Imagem do produto:</label>
-            <input type="file" id="imagem" class="form-control">
+            <input type="file" id="imagem" name="imagem" class="form-control">
           </div>
         </div>
 
+        <!-- Preço do Produto-->
+          <div class="col-md-6">
+            <label for="preco" class="form-label fw-bold">Preço:</label>
+            <div class="input-group">
+              <span class="input-group-text">R$</span>
+              <input type="number" id="preco" name="preco" class="form-control" step="0.01" placeholder="0,00" required>
+            </div>
+          </div>
+          
         <!-- Status do Produto -->
         <div class="mt-4">
           <div class="form-check">
@@ -110,15 +99,19 @@
   </footer>
 
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Script para funcionamento do formulário -->
-  <script>
-    document.getElementById("formProduto").addEventListener("submit", function(e) {
-      e.preventDefault();
-      alert("Produto salvo com sucesso!");
-      this.reset();
-    });
-  </script>
+
+  <!-- Script para funcionamento do formulário 
+ <script>
+  const params = new URLSearchParams(window.location.search);
+  if (params.get("sucesso") === "1") {
+    alert("Produto salvo com sucesso!");
+  }
+  if (params.get("erro")) {
+    alert("Erro ao salvar: " + params.get("erro"));
+  }
+</script>
+-->
 </body>
 </html>
