--- a/PAGINAS_LOJISTA/cadastroproduto.html
+++ b/PAGINAS_LOJISTA/cadastroproduto.html
@@ -98,6 +98,42 @@
     <small>&copy; 2025 JR Espetos - Todos os direitos reservados</small>
   </footer>
 
+  <!-- Lista de Produtos -->
+    <section class="mt-4" aria-labelledby="titulo-lista-produtos">
+      <div class="card shadow-sm">
+        <div class="card-header bg-white d-flex flex-wrap align-items-center justify-content-between gap-2">
+          <h5 id="titulo-lista-produtos" class="m-0">Produtos cadastrados</h5>
+          <!-- Campo de busca decorativo (sem JS) -->
+          <form class="d-inline-block" role="search" aria-label="Busca na tabela (decorativa)">
+            <input type="search" class="form-control form-control-sm" placeholder="Buscar (decorativo)" disabled>
+          </form>
+        </div>
+
+        <div class="table-responsive">
+          <table class="table table-hover align-middle mb-0 produtos-tabela">
+            <thead class="table-light">
+              <tr>
+                <th>ID</th>
+              
+                <th>Nome</th>
+                <th>Descrição</th>
+                <th class="text-end">Qtd</th>
+                <th class="text-end">Preço</th>
+                <th class="text-end">Promo</th>
+                <th>Tamanho</th>
+                <th>Cor</th>
+                <th>Código</th>
+                
+              </tr>
+            </thead>
+            <tbody>
+              <!-- será preenchido pelo JS -->
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
+
   <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
