ajustando e colocando as telas php para funcionar

--- a/PAGINAS_LOJISTA/fretepagamentolojista.html
+++ b/PAGINAS_LOJISTA/fretepagamentolojista.html
@@ -45,7 +45,7 @@
           <form action="../php/cadastro_forma_pagamento.php" method="post" class="row g-3">
             <div class="col-md-6 col-lg-4">
               <label for="fpNome" class="form-label">Nome</label>
-              <input type="text" id="fpNome" name="pagamento" class="form-control" placeholder="Ex.: Dinheiro, Cartão, PIX" required/>
+              <input type="text" id="fpNome" name="nomepagamento" class="form-control" placeholder="Ex.: Dinheiro, Cartão, PIX" required/>
             </div>
             <div class="col-12 d-flex gap-2">
               <button type="submit" class="btn btn-primary">Cadastrar</button>
