fazendo as telas php funcionarem

--- a/PAGINAS_LOJISTA/cadastroproduto.html
+++ b/PAGINAS_LOJISTA/cadastroproduto.html
@@ -41,7 +41,7 @@
         <!-- Nome do produto -->
         <div class="mb-3">
           <label for="nomeProduto" class="form-label fw-bold">Nome do produto:</label>
-          <input type="text" id="nomeProduto" class="form-control" placeholder="Digite o nome do produto" name="nome" required>
+          <input type="text" id="nomeProduto" class="form-control" placeholder="Digite o nome do produto" name="nomeproduto" required>
         </div>
 
         <!-- Descrição -->
@@ -74,11 +74,11 @@
         <!-- Status do Produto -->
         <div class="mt-4">
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="status" id="ativo" value="Ativo" checked>
+            <input class="form-check-input" type="radio" name="status" id="ativo" value="true" checked>
             <label class="form-check-label" for="ativo">Produto Ativo</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="status" id="naoAtivo" value="Não Ativo">
+            <input class="form-check-input" type="radio" name="status" id="naoAtivo" value="false">
             <label class="form-check-label" for="naoAtivo">Produto não Ativo</label>
           </div>
         </div>
