fazendo o método de listagem de formas de pagamento e fretes

--- a/PAGINAS_LOJISTA/fretepagamentolojista.html
+++ b/PAGINAS_LOJISTA/fretepagamentolojista.html
@@ -42,7 +42,7 @@
           <h5 class="m-0">Formas de Pagamento</h5>
         </div>
         <div class="card-body">
-          <form action="../php/cadastro_forma_pagamento.php" method="post" class="row g-3">
+          <form action="../PHP/cadastro_forma_pagamento.php" method="post" class="row g-3">
             <div class="col-md-6 col-lg-4">
               <label for="fpNome" class="form-label">Nome</label>
               <input type="text" id="fpNome" name="nomepagamento" class="form-control" placeholder="Ex.: Dinheiro, Cartão, PIX" required/>
@@ -65,32 +65,8 @@
                   <th class="text-end" style="width:160px">Ações</th>
                 </tr>
               </thead>
-              <tbody>
-                <!-- Exemplos estáticos -->
-                <tr>
-                  <td>1</td>
-                  <td>Dinheiro</td>
-                  <td class="text-end">
-                    <button class="btn btn-sm btn-outline-secondary">Editar</button>
-                    <button class="btn btn-sm btn-outline-danger">Excluir</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Cartão de Crédito</td>
-                  <td class="text-end">
-                    <button class="btn btn-sm btn-outline-secondary">Editar</button>
-                    <button class="btn btn-sm btn-outline-danger">Excluir</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>PIX</td>
-                  <td class="text-end">
-                    <button class="btn btn-sm btn-outline-secondary">Editar</button>
-                    <button class="btn btn-sm btn-outline-danger">Excluir</button>
-                  </td>
-                </tr>
+              <tbody id="tbPagamentos">
+                
               </tbody>
             </table>
           </div>
@@ -143,38 +119,9 @@
                   <th class="text-end" style="width:160px">Ações</th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody id="tbFretes">
                 <!-- Exemplos estáticos -->
-                <tr>
-                  <td>1</td>
-                  <td>Centro</td>
-                  <td>RápidoExpress</td>
-                  <td class="text-end">R$ 12,50</td>
-                  <td class="text-end">
-                    <button class="btn btn-sm btn-outline-secondary">Editar</button>
-                    <button class="btn btn-sm btn-outline-danger">Excluir</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Jardim das Flores</td>
-                  <td>—</td>
-                  <td class="text-end">R$ 18,00</td>
-                  <td class="text-end">
-                    <button class="btn btn-sm btn-outline-secondary">Editar</button>
-                    <button class="btn btn-sm btn-outline-danger">Excluir</button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>Vila Nova</td>
-                  <td>EntregaFácil</td>
-                  <td class="text-end">R$ 15,90</td>
-                  <td class="text-end">
-                    <button class="btn btn-sm btn-outline-secondary">Editar</button>
-                    <button class="btn btn-sm btn-outline-danger">Excluir</button>
-                  </td>
-                </tr>
+                
               </tbody>
             </table>
           </div>
@@ -207,5 +154,7 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+
+  <script src="../JS/frete_pagamentos_lojista.js"></script>
 </body>
 </html>
