--- a/PAGINAS_LOJISTA/cadastroproduto.html
+++ b/PAGINAS_LOJISTA/cadastroproduto.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="table-responsive">
-          <table class="table table-hover align-middle mb-0 produtos-tabela">
+          <table id="produtos-tabela" class="table table-hover align-middle mb-0 produtos-tabela">
             <thead class="table-light">
               <tr>
                 <th>ID</th>
@@ -133,6 +133,9 @@
         </div>
       </div>
     </section>
+
+ <script src="../JS/produtos_lojista.js"></script>
+
 
   <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
