--- a/PAGINAS_LOJISTA/promocaoebanners.html
+++ b/PAGINAS_LOJISTA/promocaoebanners.html
@@ -1,123 +1,149 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html lang="pt-BR">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Painel- promoções e banerrs</title>
-   <!--Bootstrap CSS via CDN-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  
+    <title>Painel - Promoções e Banners</title>
+    <!-- Bootstrap CSS via CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" />
-  
-    </head>
-  <body class="bg-light d-flex flex-column min-vh-100">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+</head>
+<body class="bg-light d-flex flex-column min-vh-100">
 
-  <!-- ================= MENU SUPERIOR ================= -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-custom px-3">
+<!-- ================= MENU SUPERIOR ================= -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-custom px-3">
     <a class="navbar-brand" href="index.html">
-      <img src="../IMG/logo.mr.png" alt="Logo JR Espetos" class="logo-menu">
+        <img src="../IMG/logo.mr.png" alt="Logo JR Espetos" class="logo-menu">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-        <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
-        <li class="nav-item"><a class="nav-link" href="carrinho.html">Carrinho</a></li>
-      </ul>
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
+            <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
+            <li class="nav-item"><a class="nav-link" href="carrinho.html">Carrinho</a></li>
+        </ul>
     </div>
-  </nav>
-  <!-- ================= FIM MENU SUPERIOR ================= -->
+</nav>
+<!-- ================= FIM MENU SUPERIOR ================= -->
 
-  <!-- ================= CONTEÚDO PRINCIPAL ================= -->
-  <main class="container my-4 flex-grow-1">
+<!-- ================= CONTEÚDO PRINCIPAL ================= -->
+<main class="container my-4 flex-grow-1">
     <div class="card shadow-sm p-4">
 
-      <!-- Título -->
-      <h5 class="text-center mb-4 fw-bold">Adicionar Novo Banner</h5>
+        <!-- Título -->
+        <h5 class="text-center mb-4 fw-bold">Adicionar Novo Banner</h5>
 
-      <!-- Formulário -->
-      <form action="../PHP/banners.php" method="POST" enctype="multipart/form-data">
-        <!-- Campo Título -->
-        <div class="mb-3">
-          <label for="titulo" class="form-label fw-semibold">Título:</label>
-          <input type="text" id="titulo" name="titulo" class="form-control bg-light" placeholder="Digite o título do banner">
-        </div>
+        <!-- Formulário -->
+        <form action="../PHP/banners.php" method="POST" enctype="multipart/form-data">
+            <div class="mb-3">
+                <label for="titulo" class="form-label fw-semibold">Título:</label>
+                <input type="text" id="titulo" name="titulo" class="form-control bg-light" placeholder="Digite o título do banner" required>
+            </div>
 
-        <!-- Campo Imagem -->
-        <div class="mb-4">
-          <label for="imagem" class="form-label fw-semibold">Imagem:</label>
-          <div class="upload-box text-center p-4" onclick="document.getElementById('imagem').click();">
-            <i class="bi bi-image fs-1"></i>
-            <p class="mb-0">Enviar Imagem</p>
-            <input type="file" id="imagem" name="img" class="form-control d-none">
-          </div>
-        </div>
+            <div class="mb-4">
+                <label for="imagem" class="form-label fw-semibold">Imagem:</label>
+                <div class="upload-box text-center p-4" onclick="document.getElementById('imagem').click();">
+                    <i class="bi bi-image fs-1"></i>
+                    <p class="mb-0">Enviar Imagem</p>
+                    <input type="file" id="imagem" name="img" class="form-control d-none" required>
+                </div>
+            </div>
 
-        <!-- Escolha: Banner de Promoção -->
-        <div class="mb-4 text-center">
-          <label class="form-label fw-semibold d-block">Este é um banner de promoção?</label>
-          <div class="btn-group" role="group">
-            <input type="radio" class="btn-check" name="status" id="promocao-sim" autocomplete="off">
-            <label class="btn btn-outline-danger" for="promocao-sim">Sim</label>
+            <div class="mb-4 text-center">
+                <label class="form-label fw-semibold d-block">Este é um banner de promoção?</label>
+                <div class="btn-group" role="group">
+                    <input type="radio" class="btn-check" name="status" id="promocao-sim" value="1" autocomplete="off">
+                    <label class="btn btn-outline-danger" for="promocao-sim">Sim</label>
 
-            <input type="radio" class="btn-check" name="status" id="promocao-nao" autocomplete="off" checked>
-            <label class="btn btn-outline-secondary" for="promocao-nao">Não</label>
-          </div>
-        </div>
+                    <input type="radio" class="btn-check" name="status" id="promocao-nao" value="0" autocomplete="off" checked>
+                    <label class="btn btn-outline-secondary" for="promocao-nao">Não</label>
+                </div>
+            </div>
 
-        <!-- Botão Adicionar -->
-        <div class="text-center">
-          <button type="submit" class="btn btn-danger">Adicionar Banner</button>
-        </div>
-      </form>
+            <div class="text-center">
+                <button type="submit" class="btn btn-danger">Adicionar Banner</button>
+            </div>
+        </form>
     </div>
-  </main>
-  <!-- ================= FIM CONTEÚDO PRINCIPAL ================= -->
 
-
-<!-- Lista de Produtos -->
-    <section class="mt-4" aria-labelledby="titulo-lista-produtos">
-      <div class="card shadow-sm">
-        <div class="card-header bg-white d-flex flex-wrap align-items-center justify-content-between gap-2">
-          <h5 id="titulo-lista-" class="m-0">Banners cadastrados</h5>
-          <!-- Campo de busca decorativo (sem JS) -->
-          <form class="d-inline-block" role="search" aria-label="Busca na tabela (decorativa)">
-            <input type="search" class="form-control form-control-sm" placeholder="Buscar (decorativo)" disabled>
-          </form>
+    <!-- ================= LISTA DE BANNERS ================= -->
+    <section class="mt-4">
+        <div class="card shadow-sm">
+            <div class="card-header bg-white d-flex align-items-center justify-content-between">
+                <h5 class="m-0">Banners cadastrados</h5>
+            </div>
+            <div class="table-responsive">
+                <table class="table table-hover align-middle mb-0 produtos-tabela">
+                    <thead class="table-light">
+                        <tr>
+                            <th>ID</th>
+                            <th>Título</th>
+                            <th>Imagem</th>
+                            <th>Situação</th>
+                            <th>Ações</th>
+                        </tr>
+                    </thead>
+                  <tbody id="tbBanners">
+                      <!-- Será preenchido pelo JS -->
+                  </tbody>
+                </table>
+            </div>
         </div>
+    </section>
+    <!-- Modal de Edição de Banner -->
+<div class="modal fade" id="modalEditarBanner" tabindex="-1" aria-labelledby="modalEditarBannerLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <form id="formEditarBanner" enctype="multipart/form-data">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalEditarBannerLabel">Editar Banner</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" id="edit-id" name="id">
+          <div class="mb-3">
+            <label for="edit-titulo" class="form-label">Título</label>
+            <input type="text" class="form-control" id="edit-titulo" name="titulo" required>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Imagem Atual</label>
+            <div class="text-center mb-2">
+              <img id="edit-imagem-preview" src="" alt="Imagem banner" class="img-fluid rounded" style="max-height:150px;">
+            </div>
+            <input type="file" class="form-control" id="edit-imagem" name="img">
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Este é um banner de promoção?</label>
+            <div class="btn-group" role="group">
+              <input type="radio" class="btn-check" name="status" id="edit-promocao-sim" value="1">
+              <label class="btn btn-outline-danger" for="edit-promocao-sim">Sim</label>
 
-        <div class="table-responsive">
-          <table class="table table-hover align-middle mb-0 produtos-tabela">
-            <thead class="table-light">
-              <tr>
-                <th>ID</th>
-              
-                <th>Titulo</th>
-                <th>Imagem</th>
-                <th class="text-end">Situação</th>
-                
-              </tr>
-            </thead>
-            <tbody id="tbBanerrs">
-              <!-- será preenchido pelo JS -->
-            </tbody>
-          </table>
+              <input type="radio" class="btn-check" name="status" id="edit-promocao-nao" value="0">
+              <label class="btn btn-outline-secondary" for="edit-promocao-nao">Não</label>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="submit" class="btn btn-danger">Salvar Alterações</button>
         </div>
       </div>
-    </section>
+    </form>
+  </div>
+</div>
 
-     <script src="../JS/banners.js"></script>
+</main>
+<!-- ================= FIM CONTEÚDO PRINCIPAL ================= -->
 
-  <!-- ================= RODAPÉ ================= -->
-  <footer class="footer bg-custom text-white text-center py-2 mt-auto">
+<footer class="footer bg-custom text-white text-center py-2 mt-auto">
     <small>&copy; 2025 JR Espetos - Todos os direitos reservados</small>
-  </footer>
-  <!-- ================= FIM RODAPÉ ================= -->
+</footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../JS/banners.js"></script>
 </body>
 </html>
