fazendo edição e excluir das telas funcionarem

--- a/PAGINAS_LOJISTA/cadastroproduto.html
+++ b/PAGINAS_LOJISTA/cadastroproduto.html
@@ -119,14 +119,11 @@
                 <th>Descrição</th>
                 <th class="text-end">Qtd</th>
                 <th class="text-end">Preço</th>
-                <th class="text-end">Promo</th>
-                <th>Tamanho</th>
-                <th>Cor</th>
-                <th>Código</th>
+              
                 
               </tr>
             </thead>
-            <tbody>
+            <tbody id="tbProdutos">
               <!-- será preenchido pelo JS -->
             </tbody>
           </table>
