--- a/PAGINAS_LOJISTA/homedolojista.html
+++ b/PAGINAS_LOJISTA/homedolojista.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link text-danger-emphasis" href="frete.html">Cadastro de frete</a>
+          <a class="nav-link text-danger-emphasis" href="cadastrodefrete.html">Cadastro de frete</a>
         </li>
       </ul>
     </div>
@@ -50,38 +50,46 @@
 
     <!-- Primeira linha -->
     <div class="col-6 col-md-4">
+      <a href="cadastroproduto.html">
       <div class="option-card p-4 h-100">
         <i class="bi bi-plus-circle fs-1"></i>
         <h6 class="mt-2">Adicionar Produto</h6>
         <small>Cadastrar produtos novos</small>
       </div>
+      </a>
     </div>
 
     <div class="col-6 col-md-4">
+      <a href="promocaoebanners.html">
       <div class="option-card p-4 h-100">
         <i class="bi bi-image fs-1"></i>
         <h6 class="mt-2">Adicionar Banner</h6>
         <small>Criar banners para divulgação</small>
       </div>
+      </a>
     </div>
   </div>
 
   <div class="row justify-content-center g-4 mt-1">
     <!-- Segunda linha -->
     <div class="col-6 col-md-4">
+      <a href="gerenciarpedidos.html">
       <div class="option-card p-4 h-100">
         <i class="bi bi-clipboard fs-1"></i>
         <h6 class="mt-2">Pedidos</h6>
         <small>Gerenciar pedidos</small>
       </div>
+      </a>
     </div>
 
     <div class="col-6 col-md-4">
+      <a href="suporte.html">
       <div class="option-card p-4 h-100">
         <i class="bi bi-headset fs-1"></i>
         <h6 class="mt-2">Suporte</h6>
         <small>Suporte e ajuda</small>
       </div>
+      </a>
     </div>
   </div>
 </div>
