--- a/PAGINAS_LOJISTA/cadastrodefrete.html
+++ b/PAGINAS_LOJISTA/cadastrodefrete.html
@@ -15,7 +15,7 @@
   <header class="bg-custom text-dark d-flex align-items-center justify-content-between px-3 py-2">
   
   <!-- Botão Voltar à esquerda -->
-  <a href="index.html" class="btn-voltar">
+  <a href="homedolojista.html" class="btn-voltar">
     <i class="bi bi-chevron-left"> < </i>
   </a>
 
