--- a/PAGINAS_LOJISTA/cadastroproduto.html
+++ b/PAGINAS_LOJISTA/cadastroproduto.html
@@ -10,21 +10,29 @@
 <body class="bg-light d-flex flex-column min-vh-100">
 
   <!-- Menu Superior -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-custom px-3">
-    <a class="navbar-brand" href="index.html">
-      <img src="../IMG/logo.mr.png" alt="Logo JR Espetos" class="logo-menu">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-        <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
-        <li class="nav-item"><a class="nav-link" href="carrinho.html">Carrinho</a></li>
-      </ul>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-custom px-3">
+  
+  <!-- Seta de voltar no lado esquerdo -->
+  <a class="nav-link" href="homedolojista.html">
+    <i class="bi bi-arrow-left" style="font-size: 1.5rem; color: white;"></i>
+    <li class="nav-item"><a class="nav-link" href="homedolojista.html"> < </a></li>
+  </a>
+  
+  <!-- Botão de colapso do menu (para mobile) -->
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Menu colapsável -->
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ms-auto">
+      <!-- Logo no lado direito -->
+      <li class="nav-item">
+        <img src="../IMG/logo.mr.png" alt="Logo JR Espetos" class="logo-menu" style="height: 50px;">
+      </li>
+    </ul>
+  </div>
+</nav>
 
   <!-- Container principal -->
   <main class="container my-5 flex-grow-1">
