--- a/PAGINAS_LOJISTA/fretepagamentolojista.html
+++ b/PAGINAS_LOJISTA/fretepagamentolojista.html
@@ -12,7 +12,7 @@
 
   <!-- =================== MENU SUPERIOR =================== -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-custom px-3">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="homedolojista.html">
       <img src="../IMG/logotr.png" alt="Logo JR Espetos" class="logo-menu">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
