--- a/PAGINAS_LOJISTA/suporte.html
+++ b/PAGINAS_LOJISTA/suporte.html
@@ -10,15 +10,21 @@
   
   </head>
  <body class="bg-light d-flex flex-column min-vh-100">
+<!-- ================= TOPO ================= -->
+<header class="bg-custom text-white d-flex align-items-center justify-content-between px-3 py-2">
 
-  <!-- ================= TOPO ================= -->
-  <header class="bg-custom text-white d-flex align-items-center justify-content-between px-3 py-2">
-    <!-- Botão voltar -->
-    <a href="index.html" class="text-white fs-4"><i class="bi bi-chevron-left"></i></a>
-    <!-- Link WhatsApp -->
-    <a href="https://wa.me/5599999999999" target="_blank" class="text-success fw-semibold">Falar no WhatsApp</a>
-  </header>
-  <!-- ================= FIM TOPO ================= -->
+  <!-- Seta de voltar no lado esquerdo -->
+  <a href="homedolojista.html" class="text-white fw-bold fs-4 text-decoration-none">
+    &lt; <!-- aqui você pode colocar uma imagem ou ícone -->
+  </a>
+
+  <!-- Link WhatsApp no lado direito -->
+  <a href="https://wa.me/5599999999999" target="_blank" class="text-success fw-semibold">
+    Falar no WhatsApp
+  </a>
+
+</header>
+<!-- ================= FIM TOPO ================= -->
 
   <!-- ================= LOGO E TÍTULO ================= -->
   <section class="text-center my-3">
