--- a/PAGINAS_CLIENTE/telainicial.html
+++ b/PAGINAS_CLIENTE/telainicial.html
@@ -36,28 +36,55 @@
       </ul>
     </div>
   </nav>
-  <!-- ================= CARROSSEL DE BANNERS ================= -->
-  <section class="container my-3">
-    <div id="carouselExample" class="carousel slide">
-      <div class="carousel-inner">
-        <!-- Banner ativo -->
-        <div class="carousel-item active">
-          <img src="../IMG/banner1.png" class="d-block w-100 rounded" alt="Banner Espetinhos">
-        </div>
-        <!-- Caso queira adicionar mais banners -->
-        <div class="carousel-item">
-          <img src="../IMG/banner2.png" class="d-block w-100 rounded" alt="Banner 2">
-        </div>
-      </div>
-      <!-- Controles -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
+ 
+
+<!-- ================= CARROSSEL DE BANNERS ================= -->
+<section class="container my-3">
+  <div id="carouselBanners" class="carousel slide">
+    <div class="carousel-inner" id="bannersContainer">
+      <!-- Banners carregados via JS -->
     </div>
-  </section>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselBanners" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselBanners" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+</section>
+<!-- ================= FIM CARROSSEL ================= -->
+
+
+
+
+  <!-- ================= CARROSSEL DINÂMICO DE BANNERS ================= -->
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  fetch('../PHP/banners.php?listar=1')
+    .then(response => response.json())
+    .then(data => {
+      if (!data.ok) return;
+      const container = document.getElementById('bannersContainer');
+      container.innerHTML = '';
+      data.banners.forEach((banner, index) => {
+        const activeClass = index === 0 ? 'active' : '';
+        // Convertendo base64 para URL de imagem
+        const imgSrc = banner.imagem ? `data:image/jpeg;base64,${banner.imagem}` : '../IMG/banner1.png';
+        const item = `
+          <div class="carousel-item ${activeClass}">
+            <img src="${imgSrc}" class="d-block w-100 rounded" alt="${banner.nome}">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>${banner.nome}</h5>
+              <p>${banner.situacao === 'sim' ? 'Promoção ativa' : ''}</p>
+            </div>
+          </div>
+        `;
+        container.innerHTML += item;
+      });
+    })
+    .catch(err => console.error('Erro ao carregar banners:', err));
+});
+</script>
   <!-- ================= FIM CARROSSEL ================= -->
 
   <!-- ================= STATUS LOJA ================= -->
