fazendo os ajustes finais das telas

--- a/PAGINAS_CLIENTE/detalheproduto.html
+++ b/PAGINAS_CLIENTE/detalheproduto.html
@@ -14,20 +14,19 @@
    <!-- =================== MENU SUPERIOR =================== -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-custom px-3">
     <!-- Marca/Logo -->
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand">
       <img src="../IMG/logotr.png" alt="Logo JR Espetos" class="logo-menu">
     </a>
 
     <!-- Botão responsivo -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"> < </span>
     </button>
 
     <!-- Links do menu -->
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-        <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
+        <li class="nav-item"><a class="nav-link" href="telainicial.html">Início</a></li>
         <li class="nav-item"><a class="nav-link active" href="carrinho.html">Carrinho</a></li>
       </ul>
     </div>
@@ -51,7 +50,7 @@
 
         <!-- Coluna Direita: Informações do Produto -->
         <div class="col-lg-6">
-          <h2 class="mb-3">Espeto de Picanha</h2>
+          <h2 class="mb-3">Espeto de Fraudinha</h2>
           <h4 class="text-success mb-3">R$ 7,00</h4>
           <p class="text-muted">
             Espeto de carne premium, temperada na medida certa e preparada na brasa para garantir sabor único.
