--- a/PAGINAS_CLIENTE/login.html
+++ b/PAGINAS_CLIENTE/login.html
@@ -23,17 +23,17 @@
               <div class="col-12 col-md-6 offset-md-1 d-flex justify-content-start">
                 <!-- Inicio do Formulário de login----------------------------------------->
                 <div class="login-card shadow-sm p-4">
-                  <form id="loginForm" novalidate>
+                  <form method="POST" action="../php/login.php" id="loginForm" novalidate>
                     <!-- Campo CPF -->
                     <div class="mb-3">
                       <label for="cpf" class="form-label small fw-semibold">CPF:</label>
-                      <input type="text" id="cpf" class="form-control input-light" placeholder="Digite seu CPF" required>
+                      <input type="text" id="cpf" name="cpf" class="form-control input-light" placeholder="Digite seu CPF" required>
                     </div>
 
                     <!-- Campo Senha -->
                     <div class="mb-3">
                       <label for="senha" class="form-label small fw-semibold">Senha:</label>
-                      <input type="password" id="senha" class="form-control input-light" placeholder="Digite sua senha" required>
+                      <input type="password" id="senha" name="senha" class="form-control input-light" placeholder="Digite sua senha" required>
                     </div>
 
                     <!-- Botão Esqueci minha senha -->
@@ -70,15 +70,6 @@
     <!-- Bootstrap bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- (Opcional) pequenas validações/feedback local -->
-    <script>
-      // Exemplo simples: prevenir submit padrão e exibir console (remova/adicione sua lógica)
-      document.getElementById('loginForm').addEventListener('submit', function(e){
-        e.preventDefault();
-        // aqui você pode executar validação / chamada fetch / redirecionamento
-        console.log('Tentativa de login (simulação). CPF:', document.getElementById('cpf').value);
-        // exemplo de navegação: window.location.href = 'home.html';
-      });
-    </script>
+  
   </body>
 </html>
