--- a/PAGINAS_CLIENTE/telainicial.html
+++ b/PAGINAS_CLIENTE/telainicial.html
@@ -10,7 +10,7 @@
   
     <link rel="stylesheet" href="../css/style.css" />
   
-    </head>
+   
   </head>
 <body class="bg-light">
 
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-        <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
+        <li class="nav-item"><a class="nav-link" href="perfil.html">Perfil</a></li>
         <li class="nav-item"><a class="nav-link active" href="carrinho.html">Carrinho</a></li>
       </ul>
     </div>
@@ -40,18 +40,54 @@
 
 <!-- ================= CARROSSEL DE BANNERS ================= -->
 <section class="container my-3">
-  <div id="carouselBanners" class="carousel slide">
+  <div id="carouselBanners" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner" id="bannersContainer">
-      <!-- Banners carregados via JS -->
+      <!-- Os banners serão carregados dinamicamente via JavaScript -->
     </div>
+
+    <!-- Botões de navegação -->
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselBanners" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Anterior</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselBanners" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Próximo</span>
     </button>
   </div>
 </section>
+
+<!-- Script de carregamento dos banners -->
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  fetch('../PHP/banners.php?listar=1')
+    .then(response => response.json())
+    .then(data => {
+      if (!data.ok) return;
+      const container = document.getElementById('bannersContainer');
+      container.innerHTML = '';
+
+      data.banners.forEach((banner, index) => {
+        const activeClass = index === 0 ? 'active' : '';
+        const imgSrc = banner.imagem
+          ? `data:image/jpeg;base64,${banner.imagem}`
+          : '../IMG/banner1.png';
+
+        const item = `
+          <div class="carousel-item ${activeClass}">
+            <img src="${imgSrc}" class="d-block w-100 rounded" alt="${banner.nome}">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>${banner.nome}</h5>
+              <p>${banner.situacao === 'sim' ? 'Promoção ' : ''}</p>
+            </div>
+          </div>
+        `;
+        container.innerHTML += item;
+      });
+    })
+    .catch(err => console.error('Erro ao carregar banners:', err));
+});
+</script>
 <!-- ================= FIM CARROSSEL ================= -->
 
 
@@ -72,11 +108,12 @@ document.addEventListener('DOMContentLoaded', () => {
         const imgSrc = banner.imagem ? `data:image/jpeg;base64,${banner.imagem}` : '../IMG/banner1.png';
         const item = `
           <div class="carousel-item ${activeClass}">
-            <img src="${imgSrc}" class="d-block w-100 rounded" alt="${banner.nome}">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>${banner.nome}</h5>
-              <p>${banner.situacao === 'sim' ? 'Promoção ativa' : ''}</p>
-            </div>
+           <img src="${imgSrc}" class="d-block w-100 rounded" alt="${banner.nome}" style="height:700px; object-fit:cover;">
+           <div class="carousel-caption d-none d-md-block">
+           <h5 class="text-white">${banner.nome}</h5>
+           <p class="text-white">${banner.situacao === 'sim' ? 'Promoção ' : ''}</p>
+           </div>
+
           </div>
         `;
         container.innerHTML += item;
@@ -105,10 +142,12 @@ document.addEventListener('DOMContentLoaded', () => {
     <div class="col-lg-4">
       <div class="d-flex flex-column gap-3">
         <div class="card h-100">
+          <a href="../PAGINAS_CLIENTE/detalheproduto.html" class="text-dark text-decoration-none">
           <img src="../IMG/esp.carne.png" class="card-img-top" alt="Espetinho de fraldinha">
           <div class="card-body text-center">
             <h6 class="card-title">Espetinho de fraldinha</h6>
             <p class="text-muted">R$ 7,00</p>
+            </a>
           </div>
         </div>
         <div class="card h-100">
@@ -203,12 +242,6 @@ document.addEventListener('DOMContentLoaded', () => {
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- ================= STATUS LOJA (PÚBLICO) ================= -->
-<section class="bg-custom text-white text-end px-3 py-2">
-  <span id="statusLojaPublico" class="fw-bold">
-    <i class="bi bi-circle-fill"></i> Aberto
-  </span>
-</section>
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
@@ -230,5 +263,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 <!-- ================= FIM STATUS LOJA (PÚBLICO) ================= -->
+
+
 </body>
 </html>
